<resources>
    <string name="app_name">Bootcamp</string>
    <string name="welcome_message">Welcome to My Awesome App!</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_hello">Hello %s, your password is %s!</string>
    <string name="sign_up_successful">Thank you %s for using our app!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="signup">Sign up</string>
    <string name="user_not_found">User not found!</string>
    <string name="invalid_username">Invalid Username!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="user_already_registered">User already registered!</string>
</resources>